feature: add plugin dependency support and update